test/scripted/compilation/errors/struct_overlapping_no_fields.bnj
# test:error 4:8 "structs with `overlapping` layout require at least one field"

@[layout=overlapping]
struct S {}
